--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,11 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: main
+      - name: Bump version and push tag
+        id: tag_version
+        uses: mathieudutour/github-tag-action@v5.5
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
       - name: Set up buildx for docker
         uses: docker/setup-buildx-action@v1
       - uses: docker/login-action@v1
@@ -33,8 +38,9 @@ jobs:
       - name: downcase REPO
         run: |
           echo "REPO=${GITHUB_REPOSITORY,,}" >>${GITHUB_ENV}
+          - name: Bump version and push tag
       - name: Build and push Docker images
         uses: docker/build-push-action@v2.2.1
         with:
           push: true
-          tags: ghcr.io/${{ env.REPO }}:${{ github.sha }}
+          tags: ghcr.io/${{ env.REPO }}:${{ steps.tag_version.outputs.new_tag }}
