--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
         with:
           # list of Docker images to use as base name for tags
           images: |
-            ghcr.io/{{github.actor}}/{{github.repository}}
+            ghcr.io/${{github.actor}}/${{github.repository}}
           # generate Docker tags based on the following events/attributes
           tags: |
             type=schedule
