--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,17 +32,12 @@ jobs:
         id: meta
         uses: docker/metadata-action@v3
         with:
-          # list of Docker images to use as base name for tags
           images: |
             ghcr.io/${{github.actor}}/${{github.repository}}
-          # generate Docker tags based on the following events/attributes
+          flavor: |
+            latest=auto
           tags: |
-            type=schedule
-            type=ref,event=branch
-            type=ref,event=pr
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=semver,pattern={{major}}
+            type=semver,pattern={{raw}},value=${{ steps.tag_version.outputs.new_tag }}
             type=sha
       - name: Set up buildx for docker
         uses: docker/setup-buildx-action@v1
